2004-08-22  Pawel Salek

	* configure.in: add --with-sqlite option.
	* libbalsa/Makefile.am: add address-book-gpe.[hc] - support for
	GPE address book - http://gpe.handhelds.org/
	* libbalsa/libbalsa.c: register address book object.
	* libbalsa/mailbox_pop3.c: update progress dialog more frequently.
	* libbalsa/send.c: set default "Sending.." progress dialog size.
	* src/ab-main.c: register GPE address book object.
	* src/pref-manager.c: 
	* src/address-book-config.c: add GPE address book config.
	* src/balsa-app.h: more sensible default layout and fonts.
	* src/save-restore.c: ditto.
	* src/balsa-mblist.c: shorten column titles.
	* src/main-window.c: more cleanup for touch-ui.
	* src/main.c: fixes to -s option.

2004-08-22 13:27  PeterB

	* src/mailbox-node.c: steal the mailbox when moving a special
	mailbox from the top level to a newly scanned folder tree, and make
	sure its mailbox-node is connected to the "show-prop-dialog"
	signal.
	* src/balsa-app.c: steal the mailbox instead of the mailbox-node
	when removing a special mailbox.
	* src/: folder-conf.c, mailbox-conf.c, mailbox-conf.h: pass a list
	of default ports to be stripped from host string when use_ssl is
	toggled.
	* libbalsa/server.c: document libbalsa_server_connect_signals.
	* libbalsa/mailbox_imap.c: use INBOX as default path if config file
	does not provide one, and warn the user.

2004-08-21 12:34  PeterB

	* src/: mailbox-node.c, save-restore.c: keep config entries
	consistent for an IMAP folder and any mailboxes in its tree.

2004-08-20 08:31  PeterB

	* src/: folder-conf.c, mailbox-conf.c, mailbox-conf.h: strip port
	off host string when user toggles use_ssl.
	* libbalsa/mailbox_imap.c: jensgr@gmx.net (Jens Granseuer),
	statement order.

2004-08-20  Pawel Salek

	* libbalsa/mailbox_imap.c: work with MSExchange (no sort extension).
	* libbalsa/imap/Makefile.am: remove duplicated -Werror.
	* src/Balsa.idl: add getStats method.
	* src/main.c: -s option
	* src/balsa-bonobo.c: implement it.